microservice config endpoints created, viewer version updated
